[feature]: login done

--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/Counter.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/Counter.razor
@@ -1,6 +1,6 @@
 ﻿@page "/home"
-@using Microsoft.IdentityModel.JsonWebTokens
-@layout MainLayout
+
+@attribute [Authorize] 
 
 <AuthorizeView>
     <Authorized>
