--- a/BibliotecaUteco/BibliotecaUteco.Client/Routes.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Routes.razor
@@ -1,8 +1,11 @@
 ﻿<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="@typeof(MainLayout)">
-           
-        </RouteView>
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="@typeof(MainLayout)">
+            <NotAuthorized>
+             <RedirectToIndex/>
+            </NotAuthorized>
+        </AuthorizeRouteView>
+        <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(DefaultLayout)">
