--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -16,6 +16,10 @@
 @using Blazor.Sonner
 @using BibliotecaUteco.Client.ServicesInterfaces.ApiServicesInterfaces
 @using BibliotecaUteco.Client.Components
+@using BibliotecaUteco.Client.Components.Users.Forms
+@using BibliotecaUteco.Client.Requests.Users.Actions
+@using LumexUI.Common
+@using BibliotecaUteco.Client.Components.Books.Common
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.IdentityModel.JsonWebTokens
 @inject IUsersApiServices UsersApiServices
