--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/MainLayout.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/MainLayout.razor
@@ -1,9 +1,21 @@
 ﻿@inherits LayoutComponentBase
+<AuthorizeView>
+    <NotAuthorized>
+        <RedirectToIndex/>
+    </NotAuthorized>
+</AuthorizeView>
 
-<div class="page">
-    <main>
+
+<div class="relative flex w-screen h-screen">
+    <SideBar OnSideBarExpandedChanged="(e)=> SideBarExpanded = e" SideBarExpanded="SideBarExpanded"/>
+    <main class=@($"flex-1 ml-[250px] max-md:ml-[75px]  {(!SideBarExpanded ? " !ml-[75px] " : "" )}")>
        
-        <article class="content px-4">
+        <nav class="w-full z-40 sticky top-0 py-2 px-4 items-center border-b border-neutral-300 h-[50px] gap-3 flex justify-end bg-neutral-100">
+            <h2 class="text-xl select-none font-semibold">Biblio<span class="underline decoration-green-600 decoration-2">Uteco</span></h2>
+            <img class="size-[50px] aspect-square" src="https://akanuxt.uteco.edu.do/_nuxt/img/logo.f9c953e.svg" alt="uteco logo"/>
+
+        </nav>
+        <article class="content px-4 mt-[50px] max-w-full">
             @Body
         </article>
     </main>
@@ -15,8 +27,8 @@
     <span class="dismiss">🗙</span>
 </div>
 
+@code{
 
-@code {
- 
-
+    public bool SideBarExpanded {get; set;} = true;
 }
+
