--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/Home.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/Home.razor
@@ -22,13 +22,14 @@
 
     </div>
       
-    <div class="grid grid-cols-2 sm:grid-cols-6 gap-7">
+    <div class="grid max-sm:grid-cols-2 max-md:grid-cols-3 grid-cols-6 gap-7">
         <button class="border-dotted border-2 border-green-600 aspect-[2/3] w-full rounded-xl hover:bg-green-100/30 transition-all flex flex-col justify-center items-center gap-2 cursor-pointer ">
              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide text-green-700 lucide-book-plus-icon lucide-book-plus"><path d="M12 7v6"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><path d="M9 10h6"/></svg>
              <p class="text-xs text-green-700">Agregar Libro</p>
         </button>
-        <BookCard/>
-        
+        <BookCard Name="Juego De Tronos" Author="George R. R. Martin" Cover="https://gigamesh.com/wp-content/uploads/2023/05/Juego-de-tronos.jpg" HasStock="@true"/>
+        <BookCard Name="Fuego & Sangre" Author="George R. R. Martin" Cover="https://edicioneshispanicas.com/wp-content/uploads/31270904229.jpg" HasStock="@false"/>
+
     </div>
 
    
