--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/DefaultLayout.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/DefaultLayout.razor
@@ -15,7 +15,7 @@
 
         if (user.Identity is not null && user.Identity.IsAuthenticated)
         {
-            NavManager.NavigateTo("/home");
+            NavManager.NavigateTo("/books");
             return;
         }
     }
