--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -1,5 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using BibliotecaUteco.Client.Services.ApiServices
+@using BibliotecaUteco.Client.ServicesInterfaces.ApiServices
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -20,9 +22,17 @@
 @using BibliotecaUteco.Client.Requests.Users.Actions
 @using LumexUI.Common
 @using BibliotecaUteco.Client.Components.Books.Common
+@using BibliotecaUteco.Client.Components.Authors.Common
+@using BibliotecaUteco.Client.Components.Authors.Skeletons
+
+@using BibliotecaUteco.Client.Components.Authors.Views
+@using BibliotecaUteco.Client.Requests.Authors.Queries
+
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.IdentityModel.JsonWebTokens
 @inject IUsersApiServices UsersApiServices
 @inject CustomAuthenticationStateProvider AuthStateProvider
 @inject NavigationManager NavManager
 @inject ILocalStorageService LocalStorageService
+
+@inject IAuthorsApiServices AuthorsApiServices;
