--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Views/AuthorsDropdown.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Views/AuthorsDropdown.razor
@@ -1,4 +1,4 @@
-<LumexPopover  Placement="PopoverPlacement.BottomStart" ShowArrow="true" >
+<LumexPopover Shadow="Shadow.Large" Placement="PopoverPlacement.BottomStart" ShowArrow="true" >
     <LumexPopoverTrigger>
         <button>
             <IconButton TooltipText="Ver Autores">
