--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorsContainer.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorsContainer.razor
@@ -1,7 +1,20 @@
 @using BibliotecaUteco.Client.Responses
-<div class="flex flex-col py-2 gap-4 w-[250px] max-h-[500px] overflow-y-auto ">
-    <h3 class="text-lg font-semibold">Autores</h3>
-    <div class="flex w-full gap-2 items-end">
+<div class="flex flex-col p-2 gap-4 w-[300px] max-h-[500px] overflow-y-auto ">
+    
+    @if (ShowCreateAuthorModal)
+    {
+        <div class="w-full flex items-center justify-between mb-4">
+            <label class="text-lg font-semibold">Crear Autor</label>
+            <IconButton Small="true" OnClick="() => { ShowCreateAuthorModal = false; }" TooltipText="Cancelar">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x-icon lucide-x"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+            </IconButton>
+        </div>
+        <CreateAuthorForm OnAuthorCreated="HandleOnAuthorCreated"/>
+        
+    }
+    else
+    {
+        <div class="flex w-full gap-2 items-end">
 
         <EditForm class="w-full flex items-end gap-2" Model="@GetAuthorsByName" OnValidSubmit="FetchGetAuthorsByNameAsync">
             <DataAnnotationsValidator></DataAnnotationsValidator>
@@ -21,9 +34,8 @@
         </EditForm>
         
     </div>
-    <hr class="w-full border border-neutral-300 rounded-full"/>
-
-    <button disabled="@_fetchingAuthors" class="w-full  hover:bg-green-100/30 transition-all border-dotted border-[4px] border-green-600 rounded-lg flex px-3 py-2 items-center justify-center gap-3">
+    <SidebarSectionDivider Name="Autores"/>
+    <button @onclick="() => {ShowCreateAuthorModal = true; }" disabled="@_fetchingAuthors" class="w-full hover:bg-green-100/30 transition-all border-dotted border-[4px] border-green-600 rounded-lg flex px-3 py-2 items-center justify-center gap-3 cursor-pointer">
         <p class="text-sm text-green-600">Crear Autor</p>
 
     </button>
@@ -39,17 +51,19 @@
         {
             foreach(var author in Authors)
             {
-                <hr class="w-full border border-neutral-300 rounded-full"/>
-                <AuthorCard/>
+                <AuthorCard Author="author"/>
             }
         }
         else
-        {
-            <p class="text-center">No encontramos autores</p>
+        {   
+            <NoResultsFound></NoResultsFound>
         }
 
        
     }
+    }
+    
+    
 
 </div>
 
@@ -63,6 +77,8 @@
     //props
     public List<AuthorResponse> Authors {get; set;} = new();
     public GetAuthorsByNameRequest GetAuthorsByName {get; set;} = new();
+
+    public bool ShowCreateAuthorModal { get; set; } = false;
 }
 
 @functions{
@@ -76,7 +92,13 @@
         }
 
     }
-   
+
+    public void HandleOnAuthorCreated(AuthorResponse author)
+    {
+        ShowCreateAuthorModal = false;
+        Authors.Insert(0, author);
+    }
+
     public async Task FetchGetAuthorsByNameAsync(){
 
         _fetchingAuthors = true;
