--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Forms/CreateAuthorForm.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Forms/CreateAuthorForm.razor
@@ -1,3 +1,69 @@
-<EditForm>
+@using BibliotecaUteco.Client.Responses
+<EditForm Model="CreateAuthorModel" class="w-full flex-col flex gap-2" OnValidSubmit="CreateAuthorAsync">
+    <DataAnnotationsValidator/>
 
+    <div class="flex flex-col gap-3">
+        <LumexTextbox Type="@InputType.Text"
+                      @bind-Value="@CreateAuthorModel.FullName"
+                      Label="Nombre del autor (completo)"
+                      Placeholder="Ej. R. R. Tolkien"
+                      
+                      LabelPlacement="@LabelPlacement.Outside"
+                      Required="true"
+                      Disabled="_creatingAuthor"
+                      Description="Los nombres que sean muy largos es recomendable reducirlos a iniciales"/>
+        <span class="text-red-700 text-red-700"><ValidationMessage For="@(() => CreateAuthorModel.FullName)"/></span>
+        
+    </div>
+    
+
+    @if (_creatingAuthor)
+    {
+        <LumexSpinner Variant="SpinnerVariant.Classic"></LumexSpinner>
+    }
+    else
+    {
+        <LumexButton Class="w-full" Disabled="_creatingAuthor" Type="ButtonType.Submit" Color="ThemeColor.Primary">Crear Autor</LumexButton>
+
+    }
 </EditForm>
+
+@code{
+
+    //flags
+
+    public bool _creatingAuthor { get; set; } = false;
+    
+    public CreateAuthorRequest CreateAuthorModel { get; set; } = new();
+    
+    [Parameter]
+    public EventCallback<AuthorResponse> OnAuthorCreated { get; set; }
+
+}
+
+
+@functions{
+
+
+    public async Task CreateAuthorAsync()
+    {
+        _creatingAuthor = true;
+        StateHasChanged();
+
+        var result = await AuthorsApiServices.CreateAuthorAsync(CreateAuthorModel);
+        _creatingAuthor = false;
+        StateHasChanged();
+        if (result.IsSuccessful())
+        {
+            
+            await TriggerOnAuthorCreated(result.Data);
+        }
+        
+    }
+
+    public async Task TriggerOnAuthorCreated(AuthorResponse author)
+    {
+        await OnAuthorCreated.InvokeAsync(author);
+    }
+
+}
