--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Forms/CreateAuthorForm.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Forms/CreateAuthorForm.razor
@@ -19,11 +19,11 @@
 
     @if (_creatingAuthor)
     {
-        <LumexSpinner Variant="SpinnerVariant.Classic"></LumexSpinner>
+        <LumexSpinner Size="Size.Small" Variant="SpinnerVariant.Classic"></LumexSpinner>
     }
     else
     {
-        <LumexButton Class="w-full" Disabled="_creatingAuthor" Type="ButtonType.Submit" Color="ThemeColor.Primary">Crear Autor</LumexButton>
+        <LumexButton Class="w-full"  Disabled="_creatingAuthor" Type="ButtonType.Submit" Color="ThemeColor.Primary">Crear Autor</LumexButton>
 
     }
 </EditForm>
