--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorCard.razor
@@ -1,4 +1,4 @@
-<div class="w-full border border-neutral-300 rounded-lg flex px-3 py-2 items-center justify-between gap-3">
+<div class="w-full hover:bg-neutral-100 cursor-pointer transition-all rounded-lg flex px-3 py-2 items-center justify-between gap-3">
     <div class="flex flex-col">
         <p class="text-sm font-semibold line-clamp-1 text-ellipsis overflow-hidden">@Author.FullName</p>
         
