--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/Books.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/Books.razor
@@ -1,10 +1,18 @@
 ﻿@page "/books"
 
+<PageTitle>Libros</PageTitle>
+
 <div class="flex flex-col w-full mt-[20px] gap-4 px-4">
 
     <div class="flex w-full items-center gap-2 justify-between">
         <h2 class="text-3xl font-semibold">Libros</h2>
-       <AuthorsDropdown/>
+
+        <div class="flex items-center gap-2 ">
+           <GenresDropdown/>
+            <AuthorsDropdown/>
+        </div>
+     
+       
     </div>
 
     <div class="flex w-full gap-2 items-center">
@@ -17,10 +25,27 @@
              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
         </IconButton>
     </div>
+    <div class="mb-3">
+        <LumexChip  @onclick='()=>{SetFilterBy("name");}' Variant="@(FilterBy == "name" ? ChipVariant.Solid : ChipVariant.Flat )" Color="@ThemeColor.Primary">Por Nombre</LumexChip>
+        <LumexChip @onclick='()=>{SetFilterBy("author");}' Variant="@(FilterBy == "author" ? ChipVariant.Solid : ChipVariant.Flat )" Color="@ThemeColor.Primary">Por Autor</LumexChip>
+        <LumexChip @onclick='()=>{SetFilterBy("genre");}' Variant="@(FilterBy == "genre" ? ChipVariant.Solid : ChipVariant.Flat )" Color="@ThemeColor.Primary">Por Género</LumexChip>
 
+    </div>
    <BooksContainer/>
 
    
 </div>
 
 
+
+@code{
+    public string FilterBy {get; set;} = "name";
+
+}
+
+@functions{
+    public void SetFilterBy(string filter){
+        FilterBy = filter;
+    }
+
+}
