--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using BibliotecaUteco.Client.Services.ApiServices
+@using BibliotecaUteco.Client.Services.ApiServicesInterfaces
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -31,13 +32,20 @@
 @using BibliotecaUteco.Client.Requests.Authors.Actions
 @using Microsoft.AspNetCore.Authorization
 @using BibliotecaUteco.Client.Responses
+@using BibliotecaUteco.Client.Requests.Genres.Actions
+@using BibliotecaUteco.Client.Components.Genres.Forms
+@using BibliotecaUteco.Client.Components.Genres.Common
+@using BibliotecaUteco.Client.Components.Genres.Skeletons
+@using BibliotecaUteco.Client.Components.Genres.Views
+@using BibliotecaUteco.Client.Requests.Genres.Queries
+@using BibliotecaUteco.Client.Responses
 
 @using Microsoft.IdentityModel.JsonWebTokens
-
+@using BibliotecaUteco.Client.Components.Loans.Common
 
 @inject IUsersApiServices UsersApiServices
 @inject CustomAuthenticationStateProvider AuthStateProvider
 @inject NavigationManager NavManager
 @inject ILocalStorageService LocalStorageService
-
+@inject IGenresApiSevices GenresApiServices
 @inject IAuthorsApiServices AuthorsApiServices;
