--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/app.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/app.css
@@ -2,8 +2,7 @@
 @config "../../tailwind.config.js"; /* styles */
 @import "../bin/lumexui/theme.css";
 @source "../bin/lumexui/*cs";
-@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Inconsolata:wght@200..900&display=swap');
 
 html, body {
     font-family: 'Geist', Helvetica, Arial, sans-serif;
@@ -11,12 +10,51 @@ html, body {
     
 }
 
+html {
+  /* thin | auto | none */
+  scrollbar-width: thin;
+  /* thumb track */
+  scrollbar-color: var(--sb-thumb) var(--sb-track);
+}
+
+
+*::-webkit-scrollbar {
+  width: 3px;   /* ancho vertical */
+  height: 2px;  /* alto de scrollbar horizontal */
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--color-neutral-100);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-neutral-200);
+  border-radius: 999px;
+  border: 2px solid transparent;      /* crea espacio alrededor del thumb */
+  background-clip: content-box;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-neutral-300);
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+
 .icon-button{
     
     svg{
         width: 16px !important;
         height: 16px !important;
     }
+}
+
+.inconsolata{
+
+    font-family: "Inconsolata";
 }
 
 .icon-button-sm{
