--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
@@ -80,10 +80,13 @@
     --color-zinc-700: oklch(37% 0.013 285.805);
     --color-zinc-800: oklch(27.4% 0.006 286.033);
     --color-zinc-900: oklch(21% 0.006 285.885);
+    --color-neutral-50: oklch(98.5% 0 0);
     --color-neutral-100: oklch(97% 0 0);
     --color-neutral-200: oklch(92.2% 0 0);
     --color-neutral-300: oklch(87% 0 0);
     --color-neutral-600: oklch(43.9% 0 0);
+    --color-neutral-900: oklch(20.5% 0 0);
+    --color-neutral-950: oklch(14.5% 0 0);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -536,6 +539,9 @@
   .me-auto {
     margin-inline-end: auto;
   }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
@@ -712,6 +718,9 @@
   .h-\[8\%\] {
     height: 8%;
   }
+  .h-\[10px\] {
+    height: 10px;
+  }
   .h-\[50px\] {
     height: 50px;
   }
@@ -732,6 +741,9 @@
   }
   .h-screen {
     height: 100vh;
+  }
+  .max-h-\[400px\] {
+    max-height: 400px;
   }
   .max-h-\[500px\] {
     max-height: 500px;
@@ -1230,6 +1242,10 @@
     border-left-style: var(--tw-border-style);
     border-left-width: 1px;
   }
+  .border-dashed {
+    --tw-border-style: dashed;
+    border-style: dashed;
+  }
   .border-dotted {
     --tw-border-style: dotted;
     border-style: dotted;
@@ -1380,6 +1396,9 @@
       background-color: color-mix(in oklab, var(--lumex-background) 80%, transparent);
     }
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
   .bg-danger {
     background-color: var(--lumex-danger);
   }
@@ -1467,6 +1486,9 @@
       background-color: color-mix(in oklab, var(--lumex-info) 20%, transparent);
     }
   }
+  .bg-neutral-50 {
+    background-color: var(--color-neutral-50);
+  }
   .bg-neutral-100 {
     background-color: var(--color-neutral-100);
   }
@@ -1490,6 +1512,9 @@
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-neutral-300) 50%, transparent);
     }
+  }
+  .bg-neutral-950 {
+    background-color: var(--color-neutral-950);
   }
   .bg-orange-100\/30 {
     background-color: color-mix(in srgb, oklch(95.4% 0.038 75.164) 30%, transparent);
@@ -1658,6 +1683,9 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -1778,6 +1806,9 @@
   .text-\[13px\] {
     font-size: 13px;
   }
+  .text-\[16px\] {
+    font-size: 16px;
+  }
   .text-\[50px\] {
     font-size: 50px;
   }
@@ -1876,6 +1907,9 @@
   }
   .text-neutral-600 {
     color: var(--color-neutral-600);
+  }
+  .text-neutral-900 {
+    color: var(--color-neutral-900);
   }
   .text-primary {
     color: var(--lumex-primary);
@@ -4005,6 +4039,13 @@
       }
     }
   }
+  .hover\:bg-green-50 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-green-50);
+      }
+    }
+  }
   .hover\:bg-green-100\/30 {
     &:hover {
       @media (hover: hover) {
@@ -4056,6 +4097,13 @@
         @supports (color: color-mix(in lab, red, red)) {
           background-color: color-mix(in oklab, var(--lumex-info) 20%, transparent);
         }
+      }
+    }
+  }
+  .hover\:bg-neutral-100 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-neutral-100);
       }
     }
   }
@@ -5758,15 +5806,42 @@
     color: var(--lumex-foreground);
   }
 }
-@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Inconsolata:wght@200..900&display=swap');
 html, body {
   font-family: 'Geist', Helvetica, Arial, sans-serif;
+}
+html {
+  scrollbar-width: thin;
+  scrollbar-color: var(--sb-thumb) var(--sb-track);
+}
+*::-webkit-scrollbar {
+  width: 3px;
+  height: 2px;
+}
+*::-webkit-scrollbar-track {
+  background: var(--color-neutral-100);
+}
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-neutral-200);
+  border-radius: 999px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-neutral-300);
+}
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  appearance: none;
 }
 .icon-button {
   svg {
     width: 16px !important;
     height: 16px !important;
   }
+}
+.inconsolata {
+  font-family: "Inconsolata";
 }
 .icon-button-sm {
   svg {
