--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Common/GenreCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Common/GenreCard.razor
@@ -1,17 +1,31 @@
-<div class="w-full hover:bg-neutral-100 cursor-pointer transition-all  rounded-lg flex px-3 py-2 items-center justify-between gap-3">
+<div @onclick="TriggerOnClicked" class="w-full hover:bg-neutral-100 cursor-pointer transition-all  rounded-lg flex px-3 py-2 items-center justify-between gap-3">
     <p class="text-sm font-semibold line-clamp-1 text-ellipsis overflow-hidden">@Genre.Name</p>
         
         
-   
-    <IconButton TooltipText="Opciones de género"  Small="@true">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-ellipsis-icon lucide-circle-ellipsis"><circle cx="12" cy="12" r="10"/><path d="M17 12h.01"/><path d="M12 12h.01"/><path d="M7 12h.01"/></svg>   
-    </IconButton>
+    <AuthorizeView Roles="Admin">
+        <Authorized>
+            <IconButton TooltipText="Opciones de género"  Small="@true">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-ellipsis-icon lucide-circle-ellipsis"><circle cx="12" cy="12" r="10"/><path d="M17 12h.01"/><path d="M12 12h.01"/><path d="M7 12h.01"/></svg>   
+            </IconButton>
 
+        </Authorized>
+     </AuthorizeView>
+   
+    
 
 </div>
 
 @code{
 
     [Parameter] public GenreResponse Genre { get; set; } = new();
+    [Parameter] public EventCallback<GenreResponse> OnClicked {get; set;}
 
+}
+
+@functions{
+
+    public async Task TriggerOnClicked(){
+
+        await OnClicked.InvokeAsync(Genre);
+    }
 }
