--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/SideBarButton.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/SideBarButton.razor
@@ -5,13 +5,19 @@
     <button @onclick="TriggerOnClick" class="border-neutral-300 border sidebar-button w-full cursor-pointer rounded-lg  flex items-center justify-between px-3 py-2 hover:text-green-700 transition-all text-neutral-600  bg-neutral-300/40  hover:bg-green-300/70 hover:border-green-300">
         <span class="text-[13px] font-semibold">@Name</span>
 
-        @Icon
+        @if (Icon is not null)
+        {
+            @Icon
+        }
     </button>
 }
 else
 {
     <IconButton TooltipText="@Name" OnClick="@HandleOnCLick">
-        @Icon
+        @if (Icon is not null)
+        {
+            @Icon
+        }
     </IconButton>
 }
 
@@ -19,10 +25,9 @@ else
 @code{
 
     [Parameter]    
-    public RenderFragment Icon {get; set;}
-    
-    [Parameter]
-    public string Name { get; set; }
+    public RenderFragment? Icon {get; set;}
+
+    [Parameter] public string Name { get; set; } = "";
     
     [Parameter]
     public bool IsExpanded {get; set;} = true;
