--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/MainLayout.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@implements IDisposable
 <Toaster />
 <AuthorizeView>
     <NotAuthorized>
@@ -9,7 +10,7 @@
 
 <div class="relative flex w-full h-screen">
     <SideBar OnSideBarExpandedChanged="(e)=> SideBarExpanded = e" SideBarExpanded="SideBarExpanded"/>
-    <main class=@($"flex-1 ml-[250px] max-md:ml-[75px]  {(!SideBarExpanded ? " !ml-[75px] " : "" )}")>
+    <main class=@($"flex-1 ml-[250px] max-md:ml-[75px] {(RightBarContext.View != RightBarView.Default ? "mr-[300px] max-md:mr-[0px]" : "")}  {(!SideBarExpanded ? " !ml-[75px] " : "" )}")>
        
         <nav class="w-full z-40 sticky top-0 py-2 px-4 items-center border-b border-neutral-300 h-[50px] gap-3 flex justify-end bg-neutral-100">
             <h2 class="text-xl select-none font-semibold">Biblio<span class="underline decoration-green-600 decoration-2">Uteco</span></h2>
@@ -20,6 +21,11 @@
             @Body
         </article>
     </main>
+    
+    @if (RightBarContext.View != RightBarView.Default)
+    {
+        <RightBar/>
+    }
 </div>
 
 <div id="blazor-error-ui" data-nosnippet>
@@ -31,5 +37,17 @@
 @code{
 
     public bool SideBarExpanded {get; set;} = true;
+
+    protected override void OnInitialized()
+    {
+        RightBarContext.OnViewChanged += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        RightBarContext.OnViewChanged -= StateHasChanged;
+    }
+
+
 }
 
