--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
@@ -95,6 +95,8 @@
     --breakpoint-lg: 64rem;
     --breakpoint-xl: 80rem;
     --breakpoint-2xl: 96rem;
+    --container-xs: 20rem;
+    --container-md: 28rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -452,6 +454,9 @@
   .start-3 {
     inset-inline-start: calc(var(--spacing) * 3);
   }
+  .end-1 {
+    inset-inline-end: calc(var(--spacing) * 1);
+  }
   .end-1\.5 {
     inset-inline-end: calc(var(--spacing) * 1.5);
   }
@@ -460,6 +465,9 @@
   }
   .top-0 {
     top: calc(var(--spacing) * 0);
+  }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
   }
   .top-1\/2 {
     top: calc(1/2 * 100%);
@@ -473,14 +481,29 @@
   .top-\[var\(--navbar-height\)\] {
     top: var(--navbar-height);
   }
+  .-right-\[10px\] {
+    right: calc(10px * -1);
+  }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
   .right-\[10\%\] {
     right: 10%;
+  }
+  .right-\[10px\] {
+    right: 10px;
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
   .bottom-\[10\%\] {
     bottom: 10%;
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -524,6 +547,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-0 {
+    margin-block: calc(var(--spacing) * 0);
+  }
   .my-0\.5 {
     margin-block: calc(var(--spacing) * 0.5);
   }
@@ -554,6 +580,15 @@
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
+  .mr-\[300px\] {
+    margin-right: 300px;
+  }
+  .mr-auto {
+    margin-right: auto;
+  }
+  .mb-1 {
+    margin-bottom: calc(var(--spacing) * 1);
+  }
   .mb-1\.5 {
     margin-bottom: calc(var(--spacing) * 1.5);
   }
@@ -562,6 +597,9 @@
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-\[20px\] {
+    margin-bottom: 20px;
   }
   .mb-\[25px\] {
     margin-bottom: 25px;
@@ -664,6 +702,9 @@
     width: 60px;
     height: 60px;
   }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
   .h-1\.5 {
     height: calc(var(--spacing) * 1.5);
   }
@@ -742,6 +783,9 @@
   .h-screen {
     height: 100vh;
   }
+  .max-h-\[100vh\] {
+    max-height: 100vh;
+  }
   .max-h-\[400px\] {
     max-height: 400px;
   }
@@ -777,6 +821,15 @@
   }
   .min-h-16 {
     min-height: calc(var(--spacing) * 16);
+  }
+  .min-h-\[6rem\] {
+    min-height: 6rem;
+  }
+  .min-h-\[200px\] {
+    min-height: 200px;
+  }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
   }
   .w-1\.5 {
     width: calc(var(--spacing) * 1.5);
@@ -826,6 +879,9 @@
   .w-\[40\%\] {
     width: 40%;
   }
+  .w-\[50\%\] {
+    width: 50%;
+  }
   .w-\[60\%\] {
     width: 60%;
   }
@@ -837,6 +893,9 @@
   }
   .w-\[80\%\] {
     width: 80%;
+  }
+  .w-\[100px\] {
+    width: 100px;
   }
   .w-\[250px\] {
     width: 250px;
@@ -862,6 +921,9 @@
   .w-screen {
     width: 100vw;
   }
+  .max-w-\[300px\] {
+    max-width: 300px;
+  }
   .max-w-fit {
     max-width: fit-content;
   }
@@ -885,6 +947,9 @@
   }
   .max-w-screen-xl {
     max-width: var(--breakpoint-xl);
+  }
+  .max-w-xs {
+    max-width: var(--container-xs);
   }
   .min-w-3 {
     min-width: calc(var(--spacing) * 3);
@@ -931,6 +996,9 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
@@ -949,6 +1017,9 @@
   .table-fixed {
     table-layout: fixed;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .origin-center {
     transform-origin: center;
   }
@@ -957,6 +1028,10 @@
   }
   .origin-top-left {
     transform-origin: 0 0;
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
@@ -978,12 +1053,24 @@
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * 1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .translate-y-1\/2 {
     --tw-translate-y: calc(1/2 * 100%);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .translate-y-2 {
+    --tw-translate-y: calc(var(--spacing) * 2);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .translate-y-2\/4 {
     --tw-translate-y: calc(2/4 * 100%);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-3 {
+    --tw-translate-y: calc(var(--spacing) * 3);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-3\/4 {
@@ -1010,6 +1097,9 @@
   }
   .rotate-45 {
     rotate: 45deg;
+  }
+  .transform {
+    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
   .transform-\[rotate\(calc\(30deg\*var\(--index\)\)\)_translate\(140\%\)\] {
     transform: rotate(calc(30deg * var(--index))) translate(140%);
@@ -1040,6 +1130,12 @@
   }
   .touch-none {
     touch-action: none;
+  }
+  .resize {
+    resize: both;
+  }
+  .resize-none {
+    resize: none;
   }
   .list-none {
     list-style-type: none;
@@ -1190,6 +1286,10 @@
     border-top-left-radius: var(--lumex-radius-small);
     border-top-right-radius: var(--lumex-radius-small);
   }
+  .rounded-l-lg {
+    border-top-left-radius: var(--radius-lg);
+    border-bottom-left-radius: var(--radius-lg);
+  }
   .rounded-r-lg {
     border-top-right-radius: var(--radius-lg);
     border-bottom-right-radius: var(--radius-lg);
@@ -1290,6 +1390,9 @@
   }
   .border-green-600 {
     border-color: var(--color-green-600);
+  }
+  .border-green-700 {
+    border-color: var(--color-green-700);
   }
   .border-info {
     border-color: var(--lumex-info);
@@ -1408,6 +1511,9 @@
   .bg-danger-100 {
     background-color: var(--lumex-danger-100);
   }
+  .bg-danger-200 {
+    background-color: var(--lumex-danger-200);
+  }
   .bg-danger-200\/80 {
     background-color: var(--lumex-danger-200);
     @supports (color: color-mix(in lab, red, red)) {
@@ -1437,6 +1543,9 @@
   }
   .bg-default-200 {
     background-color: var(--lumex-default-200);
+  }
+  .bg-default-300 {
+    background-color: var(--lumex-default-300);
   }
   .bg-default-300\/80 {
     background-color: var(--lumex-default-300);
@@ -1474,6 +1583,9 @@
   .bg-info-100 {
     background-color: var(--lumex-info-100);
   }
+  .bg-info-200 {
+    background-color: var(--lumex-info-200);
+  }
   .bg-info-200\/80 {
     background-color: var(--lumex-info-200);
     @supports (color: color-mix(in lab, red, red)) {
@@ -1501,6 +1613,15 @@
   .bg-neutral-200 {
     background-color: var(--color-neutral-200);
   }
+  .bg-neutral-200\/50 {
+    background-color: color-mix(in srgb, oklch(92.2% 0 0) 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-neutral-200) 50%, transparent);
+    }
+  }
+  .bg-neutral-300 {
+    background-color: var(--color-neutral-300);
+  }
   .bg-neutral-300\/40 {
     background-color: color-mix(in srgb, oklch(87% 0 0) 40%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -1516,6 +1637,9 @@
   .bg-neutral-950 {
     background-color: var(--color-neutral-950);
   }
+  .bg-orange-100 {
+    background-color: var(--color-orange-100);
+  }
   .bg-orange-100\/30 {
     background-color: color-mix(in srgb, oklch(95.4% 0.038 75.164) 30%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -1530,6 +1654,9 @@
   }
   .bg-primary-100 {
     background-color: var(--lumex-primary-100);
+  }
+  .bg-primary-200 {
+    background-color: var(--lumex-primary-200);
   }
   .bg-primary-200\/80 {
     background-color: var(--lumex-primary-200);
@@ -1552,6 +1679,9 @@
   .bg-secondary-100 {
     background-color: var(--lumex-secondary-100);
   }
+  .bg-secondary-200 {
+    background-color: var(--lumex-secondary-200);
+  }
   .bg-secondary-200\/80 {
     background-color: var(--lumex-secondary-200);
     @supports (color: color-mix(in lab, red, red)) {
@@ -1572,6 +1702,9 @@
   }
   .bg-success-100 {
     background-color: var(--lumex-success-100);
+  }
+  .bg-success-200 {
+    background-color: var(--lumex-success-200);
   }
   .bg-success-200\/80 {
     background-color: var(--lumex-success-200);
@@ -1608,6 +1741,9 @@
   }
   .bg-warning-100 {
     background-color: var(--lumex-warning-100);
+  }
+  .bg-warning-200 {
+    background-color: var(--lumex-warning-200);
   }
   .bg-warning-200\/80 {
     background-color: var(--lumex-warning-200);
@@ -1667,6 +1803,9 @@
   }
   .stroke-neutral-300 {
     stroke: var(--color-neutral-300);
+  }
+  .object-contain {
+    object-fit: contain;
   }
   .object-cover {
     object-fit: cover;
@@ -1746,8 +1885,14 @@
   .\!pb-0 {
     padding-bottom: calc(var(--spacing) * 0) !important;
   }
+  .pb-0 {
+    padding-bottom: calc(var(--spacing) * 0);
+  }
   .pb-0\.5 {
     padding-bottom: calc(var(--spacing) * 0.5);
+  }
+  .pb-1 {
+    padding-bottom: calc(var(--spacing) * 1);
   }
   .pb-1\.5 {
     padding-bottom: calc(var(--spacing) * 1.5);
@@ -1757,6 +1902,9 @@
   }
   .text-center {
     text-align: center;
+  }
+  .text-end {
+    text-align: end;
   }
   .text-left {
     text-align: left;
@@ -1826,6 +1974,9 @@
   }
   .text-nowrap {
     text-wrap: nowrap;
+  }
+  .text-wrap {
+    text-wrap: wrap;
   }
   .break-words {
     overflow-wrap: break-word;
@@ -1904,6 +2055,9 @@
   }
   .text-inherit {
     color: inherit;
+  }
+  .text-neutral-300 {
+    color: var(--color-neutral-300);
   }
   .text-neutral-600 {
     color: var(--color-neutral-600);
@@ -2054,10 +2208,22 @@
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-danger {
+    --tw-shadow-color: var(--lumex-danger);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--lumex-danger) var(--tw-shadow-alpha), transparent);
+    }
+  }
   .shadow-danger\/40 {
     --tw-shadow-color: var(--lumex-danger);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--lumex-danger) 40%, transparent) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-default {
+    --tw-shadow-color: var(--lumex-default);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--lumex-default) var(--tw-shadow-alpha), transparent);
     }
   }
   .shadow-default\/40 {
@@ -2066,10 +2232,22 @@
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--lumex-default) 40%, transparent) var(--tw-shadow-alpha), transparent);
     }
   }
+  .shadow-info {
+    --tw-shadow-color: var(--lumex-info);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--lumex-info) var(--tw-shadow-alpha), transparent);
+    }
+  }
   .shadow-info\/40 {
     --tw-shadow-color: var(--lumex-info);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--lumex-info) 40%, transparent) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-primary {
+    --tw-shadow-color: var(--lumex-primary);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--lumex-primary) var(--tw-shadow-alpha), transparent);
     }
   }
   .shadow-primary\/40 {
@@ -2078,16 +2256,34 @@
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--lumex-primary) 40%, transparent) var(--tw-shadow-alpha), transparent);
     }
   }
+  .shadow-secondary {
+    --tw-shadow-color: var(--lumex-secondary);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--lumex-secondary) var(--tw-shadow-alpha), transparent);
+    }
+  }
   .shadow-secondary\/40 {
     --tw-shadow-color: var(--lumex-secondary);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--lumex-secondary) 40%, transparent) var(--tw-shadow-alpha), transparent);
     }
   }
+  .shadow-success {
+    --tw-shadow-color: var(--lumex-success);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--lumex-success) var(--tw-shadow-alpha), transparent);
+    }
+  }
   .shadow-success\/40 {
     --tw-shadow-color: var(--lumex-success);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--lumex-success) 40%, transparent) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-warning {
+    --tw-shadow-color: var(--lumex-warning);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--lumex-warning) var(--tw-shadow-alpha), transparent);
     }
   }
   .shadow-warning\/40 {
@@ -2132,6 +2328,10 @@
       outline-offset: 2px;
     }
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .brightness-75 {
     --tw-brightness: brightness(75%);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -2161,6 +2361,10 @@
   }
   .backdrop-saturate-150 {
     --tw-backdrop-saturate: saturate(150%);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -2242,6 +2446,10 @@
   }
   .will-change-auto {
     will-change: auto;
+  }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
   }
   .select-none {
     -webkit-user-select: none;
@@ -5107,6 +5315,11 @@
       z-index: 50;
     }
   }
+  .max-md\:mr-\[0px\] {
+    @media (width < 48rem) {
+      margin-right: 0px;
+    }
+  }
   .max-md\:ml-\[75px\] {
     @media (width < 48rem) {
       margin-left: 75px;
@@ -6057,6 +6270,11 @@ input[type="search"]::-webkit-search-cancel-button {
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -6159,11 +6377,6 @@ input[type="search"]::-webkit-search-cancel-button {
   initial-value: "";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -6247,6 +6460,7 @@ input[type="search"]::-webkit-search-cancel-button {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -6272,7 +6486,6 @@ input[type="search"]::-webkit-search-cancel-button {
       --tw-duration: initial;
       --tw-ease: initial;
       --tw-content: "";
-      --tw-outline-style: solid;
     }
   }
 }
